# dpdocldm

./: .gitignore  README.md  build_configurations.sh  compute_per_label_fid.py  pyproject.toml
scripts/: compute_fids_rvlcdip.py
scripts/experiments/: README.md
scripts/experiments/iitcdip_pretraining/: README.md
scripts/experiments/rvlcdip/: classifier_exps.sh  experiment_configs.sh  experiment_configs_klf4.sh  experiment_configs_klf4_layout.sh  experiment_configs_sbv1.4.sh  experiment_configs_sbv1.4_layout.sh  train_classifier.sh  train_cls.sh
scripts/experiments/rvlcdip_final/: experiment_configs_layout_1.sh  experiment_configs_layout_10.sh  experiment_configs_layout_5.sh  train_classifier.sh
scripts/experiments/tobacco3482/: experiment_configs_klf4_layout.sh  train_classifier.sh
scripts/experiments/tobacco3482_final/: experiment_configs_layout_1.sh  experiment_configs_layout_10.sh  experiment_configs_layout_5.sh  train_classifier.sh
scripts/slurm/: gpu_run.sh  install.sh  run.sh  sbatch_run.sh
src/dp_diffusion/: config.py
src/dp_diffusion/conf/: build_configurations.py  dp_promise_trainer.yaml
src/dp_diffusion/conf/data_transform/: ccpdf_preprocess_transform.yaml  (+1 more)
src/dp_diffusion/engines/: batch_memory_manager.py  diffusion_test.py  dp_promise_training.py  dp_training.py  dp_training_step.py  privacy_engine.py  privacy_loss.py
src/dp_diffusion/models/: dit_model.py  model_configs.py
src/dp_diffusion/task_runners/: _dp_promise_trainer.py  dp_promise_trainer.py
src/dp_diffusion/transforms/: ccpdf_preprocess_transform.py  hocr_to_layout_mask.py
(+125 files in other folders)
